flashcards/charts/logging/kibana/templates/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.local
      http:
        paths:
          - path: /
            pathType: Prefix # Matches all subpaths under "/"
            backend:
              service: # Forward requests to the Kibana service
                name: kibana-kibana
                port:
                  number: 5601 # Kibana service port
